K8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  namespace: nginx-demo
spec:
  type: ClusterIP
  selector:
    app: nginx-demo
  ports:
    - port: 80
      targetPort: 80
